src/test/ui/closures/closure-move-sync.stderr
error[E0277]: `Receiver<()>` cannot be shared between threads safely
  --> $DIR/closure-move-sync.rs:6:13
   |
LL |     let t = thread::spawn(|| {
   |             ^^^^^^^^^^^^^ `Receiver<()>` cannot be shared between threads safely
   | 
  ::: $SRC_DIR/std/src/thread/mod.rs:LL:COL
   |
LL |     F: Send + 'static,
   |        ---- required by this bound in `spawn`
   |
   = help: the trait `Sync` is not implemented for `Receiver<()>`
   = note: required because of the requirements on the impl of `Send` for `&Receiver<()>`
   = note: required because it appears within the type `[closure@$DIR/closure-move-sync.rs:6:27: 9:6 recv:&Receiver<()>]`

error[E0277]: `Sender<()>` cannot be shared between threads safely
  --> $DIR/closure-move-sync.rs:18:5
   |
LL |     thread::spawn(|| tx.send(()).unwrap());
   |     ^^^^^^^^^^^^^ `Sender<()>` cannot be shared between threads safely
   | 
  ::: $SRC_DIR/std/src/thread/mod.rs:LL:COL
   |
LL |     F: Send + 'static,
   |        ---- required by this bound in `spawn`
   |
   = help: the trait `Sync` is not implemented for `Sender<()>`
   = note: required because of the requirements on the impl of `Send` for `&Sender<()>`
   = note: required because it appears within the type `[closure@$DIR/closure-move-sync.rs:18:19: 18:42 tx:&Sender<()>]`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
